# mcin_info_scraper_n_changer

./: .env  README.md  main.py  pyproject.toml
data/: authors.json
data/json/: midnames.json  names.json
result/: changed authors.json  unchanged authors.json
src/: base.py  changer.py  scraper.py  tab.py
