[tool.poetry]
name = "pythonproject3"
version = "0.1.0"
description = ""
authors = ["fookashi <darezzzlol@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.15.1"
orjson = "^3.9.10"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
