[tool.poetry]
name = "mcin_info_changer"
version = "0.5.0"
description = "MCIN authors scraper and changer"
authors = ["fookashi(Denis) <darezzzlol@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.15.1"
orjson = "^3.9.10"
requests = "^2.31.0"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
